src/objects/Strategic_Initiative__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic Initiatives</relationshipLabel>
        <relationshipName>StrategicInitiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategic_Initiative_URL__c</fullName>
        <label>Strategic_Initiative_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Strategic_Initiative__c</fullName>
        <label>Strategic Initiative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Título</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titulo_Iniciativa__c</fullName>
        <label>Titulo Iniciativa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mejorar modelo de atención</fullName>
                </value>
                <value>
                    <fullName>Aumentar la participación de mercado</fullName>
                </value>
                <value>
                    <fullName>Gestión de la Transformación Digital</fullName>
                </value>
                <value>
                    <fullName>Fidelización de clientes</fullName>
                </value>
                <value>
                    <fullName>Seguridad de la información</fullName>
                </value>
                <value>
                    <fullName>Eficiencia en sus procesos</fullName>
                </value>
                <value>
                    <fullName>Reducción de costes</fullName>
                </value>
                <value>
                    <fullName>Innovación Tecnológica</fullName>
                </value>
                <value>
                    <fullName>Expansión Internacional</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Strategic Initiative</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Strategic Initiatives</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>